# Call_me_Master

./: CMakeLists.txt  README.md  TODO  board_handler.c  board_handler.h  client_registration.c  client_registration.h  connection_base_struct.c  connection_base_struct.h  game_step.c  game_step.h  gams_status.c  gams_status.h  lib_connection.c  lib_connection.h  lib_server.c  lib_server.h  main.c  message_defines.h  message_helper.c  message_helper.h  message_parser.c  message_parser.h  print_in_color.c  print_in_color.h  reservsi_mecanics.c  reservsi_mecanics.h  time_keeper.c  time_keeper.h  tmp.cpp
